# fix-rust

./: .gitignore  Cargo.toml  README.md
fix/: Cargo.toml  README.md
fix/benches/: benches1.rs
fix/src/: fixmessage.rs  fixmessagegen.rs  frame.rs  lib.rs
fix/tests/: frame_tests.rs  message_building.rs  message_parsing.rs  parsing_blocks.rs
fixclient/: .gitignore  Cargo.toml  README.md
fixclient/src/: builder.rs  conn.rs  io_handler.rs  lib.rs  sender.rs
fixclient/src/connector/: fslogger.rs  fsstore.rs  handler.rs  memstore.rs  mod.rs  resendresponse.rs  session.rs  statemac2.rs  statemachine.rs  syncstate.rs
fixclient/tests/: fsmessagestore_test.rs  resend_request_response_test.rs  session_resend_test.rs  statemachine_test.rs
fixcodegen/: Cargo.toml  README.md
fixcodegen/specs/: FIX42_dw.xml  FIX42min.xml  FIX44.xml
fixcodegen/src/: lib.rs  model.rs
fixcodegen/template/: gen.hbs  model.hbs  parsing.hbs
testclient/: Cargo.toml
testclient/src/: main.rs
