[package]
name = "fix"
version = "0.1.0"
authors = ["hammett <hammett@gmail.com>"]
# build = "build.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }   # datetime lib
nom = "^3.0"     # comb parser
# mio = "0.6"      # network
# mio-more = "0.1" # evented channel + evented timer
# slab = "0.3"     # experimenting with pre-allocation
bytes = "^0.4"
# futures = "^0.1"
# tokio-core = "^0.1"
# tokio-io = "^0.1"
# tokio-timer = "^0.1"
log = "^0.3"
time = "^0.1"
serde = "1.0"
serde_derive = "1.0"
# serde_json = "1.0"
env_logger = "^0.4"

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "benches1"
harness = false
