[package]
name = "fix"
version = "0.1.0"
authors = ["hammett <hammett@gmail.com>"]
# build = "build.rs"

[features]
default = []
fix42 = []
# fix44 = []

[dependencies]
chrono       = { version = "0.4", features = ["serde"] }             # datetime lib
nom          = { version = "^3.2.1" } # , features = ["verbose-errors"] } # comb parser
bytes        = "^0.4"
log          = "^0.3"
time         = "^0.1"
serde        = "1.0"
serde_derive = "1.0"
env_logger   = "^0.4"

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "benches1"
harness = false
