[package]
name = "fixcodegen"
version = "0.1.0"
authors = ["hammett <hammett@gmail.com>"]

[dependencies]
handlebars = "^0.27"
# handlebars = { path = "../../handlebars-rust" }
xmltree = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
itertools = "0.6.2"
time = "0.1"
argparse   = "*"

[profile.release]
debug = true  # for profiling