[package]
name = "fixcodegen"
version = "0.1.0"
authors = ["hammett <hammett@gmail.com>"]
repository = "https://github.com/avenuesec/fix-rust"
readme = "README.md"
keywords = ["fix"]
categories = ["finance"]
license = "ASL"

[dependencies]
handlebars = "^0.27"
# handlebars = { path = "../../handlebars-rust" }
xmltree = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
argparse = "*"

[profile.release]
debug = true  # for profiling